# sift

./: .gitignore  CHANGELOG.md  LICENSE  README.md  deny.toml  package-lock.json  package.json  sift.mjs
.cursor/rules/: common-coding-style.md  common-security.md  common-testing.md  rust-coding-style.md  rust-security.md  typescript-coding-style.md  typescript-patterns.md  typescript-security.md  typescript-testing.md
.cursor/skills/: healthcare-cdss-patterns.md  healthcare-emr-patterns.md  healthcare-phi-compliance.md  hipaa-compliance.md
.github/workflows/: ci.yml  release.yml
backend/: jest.config.cjs  package-lock.json  package.json  tsconfig.build.json
backend/src/: app.ts  db.ts  index.ts  ingest.ts  llm.ts  llmDefaults.ts
backend/src/__tests__/: app.test.ts  ingest.test.ts
backend/src/pipelines/: fhir.ts  hl7.ts  (+1 more)
docs/: ARCHITECTURE.md  BUILD-AND-RELEASE.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  GLOSSARY.md  INSTALLATION.md  QUICKSTART.md  README.md  SECURITY-AND-COMPLIANCE.md  TESTING.md  TROUBLESHOOTING.md  Transform-Summary.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  MarkdownText.test.tsx  MarkdownText.tsx  api.test.ts  api.ts  printReport.ts  styles.css  tauri-env.test.ts  tauri-env.ts  vite-env.d.ts
samples/: README.md  lab-result-hl7.hl7  patient-fhir-bundle.json  referral-letter.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+2 files in other folders)
