[package]
name = "sift"
version = "0.1.0"
description = "Sift clinical intelligence"
authors = ["Sift"]
edition = "2021"

[lib]
name = "sift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
notify = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
